--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,56 @@
-// TODO
+.homeMain {
+  position: absolute;
+  height: 34px;
+  width: 700px;
+  left: 23.1rem;
+  top: 12.2rem;
+  border-radius: nullpx;
+}
+
+.homeSection {
+  h1 {
+    position: relative;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 68.52%;
+
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 34px;
+
+    text-align: justify;
+    letter-spacing: -0.5px;
+
+    color: #F8F8F8;
+
+  }
+
+  h2 {
+    position: relative;
+    left: 0%;
+    right: 28.57%;
+    top: 6px;
+    bottom: 40.74%;
+
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+
+    text-align: justify;
+    color: #D7D7D7;
+  }
+
+  div {
+    position: relative;
+    left: -2px;
+    right: 84.43%;
+    top: 25px;
+    bottom: 1.85%;
+
+  }
+}
