styling home page

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -5,52 +5,108 @@
   left: 23.1rem;
   top: 12.2rem;
   border-radius: nullpx;
+
+  .homeSection {
+    h1 {
+      position: relative;
+      left: 0%;
+      right: 0%;
+      top: 0%;
+      bottom: 68.52%;
+
+      font-family: Inter;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 28px;
+      line-height: 34px;
+
+      text-align: justify;
+      letter-spacing: -0.5px;
+
+      color: #F8F8F8;
+
+    }
+
+    h2 {
+      position: relative;
+      left: 0%;
+      right: 28.57%;
+      top: 6px;
+      bottom: 40.74%;
+
+      font-family: Inter;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 22px;
+
+      text-align: justify;
+      color: #D7D7D7;
+    }
+
+    .homeCalendarUser{
+      display: block;
+
+      .homeCalendar {
+        position: relative;
+        left: 0%;
+        right: 65.14%;
+        margin-top: 2rem;
+        bottom: 0%;
+
+        svg {
+          position: flex;
+          width: 0.9rem;
+          left: 1rem;
+          right: 1rem;
+          color: #BBBBBB;
+        }
+
+        time {
+          position: flex;
+          margin-left: 0.6rem;
+          right: 84.71%;
+          bottom: 1.85%;
+
+          font-family: Inter;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 17px;
+          color: #BBBBBB;
+        }
+      }
+
+      .homeUser {
+        position: relative;
+        left: 19%;
+        right: 65.14%;
+        margin-top: -1rem;
+        bottom: 0%;
+
+        svg {
+          position: relative;
+          width: 0.9rem;
+          left: 1rem;
+          right: 1rem;
+          color: #BBBBBB;
+        }
+
+        text {
+          position: flex;
+          margin-left: 1.5rem;
+          right: 84.71%;
+          bottom: 1.85%;
+
+          font-family: Inter;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 17px;
+          color: #BBBBBB;
+        }
+      }
+    }
+  }
 }
 
-.homeSection {
-  h1 {
-    position: relative;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 68.52%;
-
-    font-family: Inter;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 28px;
-    line-height: 34px;
-
-    text-align: justify;
-    letter-spacing: -0.5px;
-
-    color: #F8F8F8;
-
-  }
-
-  h2 {
-    position: relative;
-    left: 0%;
-    right: 28.57%;
-    top: 6px;
-    bottom: 40.74%;
-
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-
-    text-align: justify;
-    color: #D7D7D7;
-  }
-
-  div {
-    position: relative;
-    left: -2px;
-    right: 84.43%;
-    top: 25px;
-    bottom: 1.85%;
-
-  }
-}
